deriving/tests/rejected/eq3.ml
(* Eq for classes *)
class c = object end deriving (Eq)
